# rtenkit

./: Cargo.toml  Cross.toml  LICENSE  README.md
.github/workflows/: release.yml
bindings/go/: README.md  cgo.go  cgo_dynamic.go  cgo_static.go  go.mod
bindings/go/example/: Makefile  main.go
src/: embeddings.rs  lib.rs
