[package]
name = "rtenkit"
version = "0.1.0"
edition = "2021"

[lib]
name = "rtenkit"
path = "src/lib.rs"
crate-type = ["cdylib","staticlib"]

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols" 

[dependencies]
rten = {git = "https://github.com/robertknight/rten.git", rev = "0ecfe778bc123cc41b7c614c10486ee2cc87a972" }
rten-tensor = {git = "https://github.com/robertknight/rten.git", rev = "0ecfe778bc123cc41b7c614c10486ee2cc87a972" }

kitoken = "0.10.1"
anyhow = "1.0.98"
