[package]
name = "rtenkit"
version = "0.1.2"
edition = "2021"

[lib]
name = "rtenkit"
path = "src/lib.rs"
crate-type = ["cdylib","staticlib"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols" 
debug = false
rpath = false

[dependencies]
rten = "0.18.0"
rten-tensor = "0.18.0"
kitoken = "0.10.1"
anyhow = "1.0.98"
